--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 *.exe
 *.out
 *.app
+.vs/opengl-cpp-example/v16/Browse.VC.db
+.vs/opengl-cpp-example/v16/ipch/AutoPCH/1202f967fba19686/APPLICATION.ipch
